# pina-engine

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  CMakeLists.txt  build-macos.sh
.claude/commands/: build.md  clean.md  new-class.md  new-sample.md  review.md  test.md
cmake/: Dependencies.cmake
editor/: CMakeLists.txt
editor/src/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  Selection.cpp  Selection.h  main.cpp
editor/src/Gizmos/: Gizmo.cpp  Gizmo.h  GizmoRenderer.cpp  GizmoRenderer.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
editor/src/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.h  ViewportPanel.cpp  ViewportPanel.h
engine/: CMakeLists.txt
engine/src/: Pina.h
engine/src/Core/: Application.cpp  Application.h  Context.cpp  Context.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  Export.h  Memory.h  Subsystem.h
engine/src/Graphics/: Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  FreelookCamera.cpp  FreelookCamera.h  GraphicsDevice.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrbitCamera.cpp  OrbitCamera.h  RenderCompositor.cpp  RenderCompositor.h  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Shader.h  Texture.cpp  Texture.h  VertexLayout.h
engine/src/Graphics/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
engine/src/Graphics/Loaders/: AssimpLoader.cpp  AssimpLoader.h  TinyGLTFLoader.cpp  TinyGLTFLoader.h
engine/src/Graphics/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLCommon.h  GLDevice.cpp  GLDevice.h  GLFramebuffer.cpp  GLFramebuffer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
engine/src/Graphics/Passes/: BloomPass.h  ClearPass.h  FXAAPass.h  ScenePass.h  ShaderPass.h  ShadowPass.h  ToneMappingPass.h
engine/src/Graphics/Primitives/: CubeMesh.cpp  CubeMesh.h  QuadMesh.cpp  QuadMesh.h  StaticMesh.cpp  StaticMesh.h  TriangleMesh.cpp  TriangleMesh.h
engine/src/Graphics/Shaders/: ShaderLibrary.cpp  ShaderLibrary.h
engine/src/Input/: Input.h  InputEvents.h  KeyCodes.h
engine/src/Math/: Color.h  Geometry.h  Mathf.h  Plane.h  Ray.h  Vector2.h  Vector3.h  Vector4.h
engine/src/Platform/: Graphics.h  GraphicsContext.h  Window.h
engine/src/Platform/Cocoa/: CocoaGLContext.h  CocoaGLContext.mm  CocoaInput.h  CocoaInput.mm  CocoaWindow.h  CocoaWindow.mm
engine/src/Scene/: Node.cpp  Node.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Transform.cpp  Transform.h
engine/src/UI/: UI.h  UITypes.h  UIWidgets.h
engine/src/UI/ImGui/: ImGuiTheme.cpp  ImGuiTheme.h  ImGuiUI.h  ImGuiUI.mm  ImGuiWidgets.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
samples/: CMakeLists.txt
samples/cube/: CMakeLists.txt  main.cpp
samples/input/: CMakeLists.txt  main.cpp
samples/lighting/: CMakeLists.txt  main.cpp
samples/model/: CMakeLists.txt  main.cpp
samples/model/assets/: license.txt  scene.gltf
samples/model/assets/backpack/: license.txt
samples/model/assets/post_apocalyptic/: license.txt  scene.gltf
samples/texture/: CMakeLists.txt  main.cpp
samples/triangle/: CMakeLists.txt  main.cpp
samples/window/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/: ApplicationTests.cpp  MemoryTests.cpp
tests/platform/: GraphicsContextTests.cpp  WindowTests.cpp
