# Pina Engine Samples

add_subdirectory(window)
add_subdirectory(triangle)
add_subdirectory(cube)
add_subdirectory(input)
add_subdirectory(lighting)
add_subdirectory(texture)

# Add more samples here as they are created
# add_subdirectory(character)
# add_subdirectory(vehicle)
# add_subdirectory(particles)
# add_subdirectory(postprocessing)
